libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h
@@ -56,6 +56,8 @@ public:
     void cancel() override;
     void proceed() override;
 
+    static void populateRemote(FlatpakRemote *remote, const QString &name, const QString &url, const QString &gpgkey);
+
 private:
     bool listRepositories(FlatpakInstallation *installation);
     void addRemote(FlatpakRemote *remote, FlatpakInstallation *installation);
